--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   #Para el .env
   flutter_dotenv: ^5.1.0
+  #logger para el registro de errores
+  logger: ^2.4.0
 
 dev_dependencies:
 
